// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadHeader — dark theme idle 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityLabel="Maya. View profile."
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        accessibilityLabel="Maya's avatar"
        accessibilityRole="image"
        accessible={true}
        style={
          [
            {
              "borderRadius": 999,
              "height": 32,
              "width": 32,
            },
            {
              "alignItems": "center",
              "backgroundColor": "#3A2419",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#FF8560",
              },
              {
                "fontSize": 12.8,
                "lineHeight": 16,
              },
            ]
          }
        >
          M
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Inter-SemiBold",
                "fontSize": 20,
                "lineHeight": 28,
              },
              {
                "color": "#F5F2ED",
              },
              undefined,
            ]
          }
        >
          Maya
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ThreadHeader — dark theme is not tappable before the partner loads 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityLabel=". View profile."
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        accessibilityLabel="Avatar"
        accessibilityRole="image"
        accessible={true}
        style={
          [
            {
              "borderRadius": 999,
              "height": 32,
              "width": 32,
            },
            {
              "alignItems": "center",
              "backgroundColor": "#3A2419",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#FF8560",
              },
              {
                "fontSize": 12.8,
                "lineHeight": 16,
              },
            ]
          }
        >
          ?
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Inter-SemiBold",
                "fontSize": 20,
                "lineHeight": 28,
              },
              {
                "color": "#F5F2ED",
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ThreadHeader — light theme idle 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityLabel="Maya. View profile."
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        accessibilityLabel="Maya's avatar"
        accessibilityRole="image"
        accessible={true}
        style={
          [
            {
              "borderRadius": 999,
              "height": 32,
              "width": 32,
            },
            {
              "alignItems": "center",
              "backgroundColor": "#FCE9E2",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#F2724B",
              },
              {
                "fontSize": 12.8,
                "lineHeight": 16,
              },
            ]
          }
        >
          M
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Inter-SemiBold",
                "fontSize": 20,
                "lineHeight": 28,
              },
              {
                "color": "#1A1815",
              },
              undefined,
            ]
          }
        >
          Maya
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ThreadHeader — light theme is not tappable before the partner loads 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityLabel=". View profile."
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        accessibilityLabel="Avatar"
        accessibilityRole="image"
        accessible={true}
        style={
          [
            {
              "borderRadius": 999,
              "height": 32,
              "width": 32,
            },
            {
              "alignItems": "center",
              "backgroundColor": "#FCE9E2",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#F2724B",
              },
              {
                "fontSize": 12.8,
                "lineHeight": 16,
              },
            ]
          }
        >
          ?
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Inter-SemiBold",
                "fontSize": 20,
                "lineHeight": 28,
              },
              {
                "color": "#1A1815",
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
